expose some JS methods, fix autocomplete menu z-index

--- a/app/assets/stylesheets/folio/console/modules/simple_form_inputs/_string_input.sass
+++ b/app/assets/stylesheets/folio/console/modules/simple_form_inputs/_string_input.sass
@@ -1,4 +1,6 @@
 .folio-console-autocomplete-input-menu
+  z-index: 1051
+
   .dropdown-item.ui-state-active
     +gradient-bg($dropdown-link-hover-bg)
     color: $dropdown-link-hover-color
